# ai-usage-tracker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
.beads/.br_history/: issues.20260309_084615_323087000.jsonl
.claude/skills/: combined-usage
ai_usage_tracker/: __init__.py  cli.py  core.py
docs/: usage-report.md
npm/: package-lock.json  package.json  tsconfig.json
npm/src/: cli.ts  index.ts  tracker.ts
scripts/: combined-usage-report.py  install-dependencies.sh
