[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-usage-tracker"
version = "0.1.5"
description = "Combined Claude + Codex token usage and cost tracking CLI"
authors = [
    { name = "jleechan", email = "jlee@jleechan.org" },
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
keywords = [
    "ai",
    "usage",
    "tracker",
    "claude",
    "codex",
    "tokens",
    "cost",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/jleechanorg/ai-usage-tracker"
Repository = "https://github.com/jleechanorg/ai-usage-tracker"
Issues = "https://github.com/jleechanorg/ai-usage-tracker/issues"

[project.scripts]
ai-usage-tracker = "ai_usage_tracker.cli:main"

[tool.setuptools]
packages = ["ai_usage_tracker"]
